// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-card renders image left with children content 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            role="presentation"
            style="width: 100%;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="padding: 0px 16px 0px 0px;"
                  valign="top"
                  width="40%"
                >
                  <img
                    alt="Sample product"
                    src="https://assets.usewaypoint.com/sample-image.jpg"
                    style="display: block; height: auto; outline: none; text-decoration: none; max-width: 100%;"
                  />
                </td>
                <td
                  style="text-align: left;"
                  valign="top"
                >
                  <h3>
                    New arrival
                  </h3>
                  <p>
                    A short description of the product.
                  </p>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`block-card renders image right 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            role="presentation"
            style="width: 100%;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="text-align: left;"
                  valign="top"
                />
                <td
                  style="padding: 0px 0px 0px 16px;"
                  valign="top"
                  width="40%"
                >
                  <img
                    alt=""
                    src="https://assets.usewaypoint.com/sample-image.jpg"
                    style="display: block; height: auto; outline: none; text-decoration: none; max-width: 100%;"
                  />
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`block-card renders with default values 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            role="presentation"
            style="width: 100%;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="text-align: left;"
                  valign="top"
                />
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
